<resources>
    <string name="app_name">MaraudersMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="github_releases_url">https://github.com/nitegazer/maraudersmap/releases</string>

    <string name="username1_title">Username 1: </string>
    <string name="username2_title">Username 2: </string>
    <string name="username3_title">Username 3: </string>
    <string name="username4_title">Username 4: </string>
    <string name="username5_title">Username 5: </string>
    <string name="username6_title">Username 6: </string>
    <string name="password1_title">Password 1: </string>
    <string name="password2_title">Password 2: </string>
    <string name="password3_title">Password 3: </string>
    <string name="password4_title">Password 4: </string>
    <string name="password5_title">Password 5: </string>
    <string name="password6_title">Password 6: </string>

    <string name="invalid_credentials_message">Username/password may not contain spaces.</string>
    <string name="invalid_credentials_title">Invalid credentials</string>
    <string name="pref_username">username</string>
    <string name="pref_password">password</string>
    <string name="pref_usernames">usernames</string>
    <string name="pref_passwords">passwords</string>
    <string name="pref_scan_radius">scanRadius</string>
    <string name="pref_last_lat">lastLatitude</string>
    <string name="pref_last_lng">lastLongitude</string>
    <string name="pref_show_ivs">showIvValues</string>
    <string name="pref_show_ivs_on_summary">IV% will be shown on map markers</string>
    <string name="pref_show_ivs_off_summary">IV% will not be shown on map markers</string>
    <string name="pref_background_scan">backgroundScan</string>
    <string name="pref_scan_frequency">scanFrequency</string>
    <string name="pref_scan_frequency_default">3</string>
    <string name="action_location_update">org.kca.maraudersmap.ACTION_LOCATION_UPDATE</string>
    <string name="pref_notify_pokemon_rarity">pokemonRarityToNotify</string>
    <string name="pref_notify_pokemon_rarity_default">4</string>
    <string name="pref_last_scan">lastScanMillis</string>
    <string name="power_saving_warning_title">Power Saving On</string>
    <string name="power_saving_warning_message">Background scan will not work if power saving is on. Turn off power saving first.</string>
    <string name="select_loc">Start scan here</string>

</resources>
