<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username1_title"
                android:id="@+id/username1Title"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username1Value"
                android:layout_alignBottom="@+id/username1Title"
                android:layout_toEndOf="@+id/username1Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_alignTop="@+id/username1Title"
                android:textColor="#000000"
                android:background="#ffffff"
                android:inputType="text"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password1_title"
                android:id="@+id/password1Title"
                android:layout_below="@+id/username1Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password1Value"
                android:layout_alignBottom="@+id/password1Title"
                android:layout_alignTop="@+id/password1Title"
                android:layout_toEndOf="@+id/password1Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="#000000"
                android:background="#ffffff"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username2_title"
                android:id="@+id/username2Title"
                android:layout_below="@+id/password1Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username2Value"
                android:layout_alignBottom="@+id/username2Title"
                android:layout_alignTop="@+id/username2Title"
                android:layout_toEndOf="@+id/username2Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="#000000"
                android:background="#ffffff"
                android:inputType="text"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password2_title"
                android:id="@+id/password2Title"
                android:layout_below="@+id/username2Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password2Value"
                android:layout_alignBottom="@+id/password2Title"
                android:layout_alignTop="@+id/password2Title"
                android:layout_toEndOf="@+id/password2Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:background="#ffffff"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username3_title"
                android:id="@+id/username3Title"
                android:layout_below="@+id/password2Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username3Value"
                android:layout_alignBottom="@+id/username3Title"
                android:layout_alignTop="@+id/username3Title"
                android:layout_toEndOf="@+id/username3Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="#000000"
                android:background="#ffffff"
                android:inputType="text"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password3_title"
                android:id="@+id/password3Title"
                android:layout_below="@+id/username3Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password3Value"
                android:layout_alignBottom="@+id/password3Title"
                android:layout_alignTop="@+id/password3Title"
                android:layout_toEndOf="@+id/password3Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:background="#ffffff"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username4_title"
                android:id="@+id/username4Title"
                android:layout_below="@+id/password3Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username4Value"
                android:layout_alignBottom="@+id/username4Title"
                android:layout_alignTop="@+id/username4Title"
                android:layout_toEndOf="@+id/username4Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="#000000"
                android:background="#ffffff"
                android:inputType="text"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password4_title"
                android:id="@+id/password4Title"
                android:layout_below="@+id/username4Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password4Value"
                android:layout_alignBottom="@+id/password4Title"
                android:layout_alignTop="@+id/password4Title"
                android:layout_toEndOf="@+id/password4Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:background="#ffffff"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username5_title"
                android:id="@+id/username5Title"
                android:layout_below="@+id/password4Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username5Value"
                android:layout_alignBottom="@+id/username5Title"
                android:layout_alignTop="@+id/username5Title"
                android:layout_toEndOf="@+id/username5Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="#000000"
                android:background="#ffffff"
                android:inputType="text"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password5_title"
                android:id="@+id/password5Title"
                android:layout_below="@+id/username5Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password5Value"
                android:layout_alignBottom="@+id/password5Title"
                android:layout_alignTop="@+id/password5Title"
                android:layout_toEndOf="@+id/password5Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:background="#ffffff"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username6_title"
                android:id="@+id/username6Title"
                android:layout_below="@+id/password5Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/username6Value"
                android:layout_alignBottom="@+id/username6Title"
                android:layout_alignTop="@+id/username6Title"
                android:layout_toEndOf="@+id/username6Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="#000000"
                android:background="#ffffff"
                android:inputType="text"
                android:imeOptions="actionNext"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password6_title"
                android:id="@+id/password6Title"
                android:layout_below="@+id/username6Title"
                android:layout_alignParentStart="true"
                android:layout_margin="7dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/password6Value"
                android:layout_alignBottom="@+id/password6Title"
                android:layout_alignTop="@+id/password6Title"
                android:layout_toEndOf="@+id/password6Title"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:background="#ffffff"
                android:imeOptions="actionDone"
                />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
